--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -1,3 +1,7 @@
+import README from '../README.md';
+
+<Meta title="README" />
+
 # react-native-flex-grid
 A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s web grid.
 
