--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -1,5 +1,3 @@
-import README from '../README.md';
-
 <Meta title="README" />
 
 # react-native-flex-grid
@@ -116,6 +114,10 @@ setConfig({
   },
 });
 ```
+
+#### API
+- getConfig: returns config object
+- setConfig: modifies config object
 
 ### Helpful resources
 - [Bootstrap layout documentation](https://getbootstrap.com/docs/5.0/layout)
