--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -9,6 +9,10 @@ A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s we
 </a>
 <a href="https://twitter.com/intent/follow?screen_name=ahmad_tokyo"><img src="https://img.shields.io/twitter/follow/ahmad_tokyo.svg?label=Follow%20@ahmad_tokyo" alt="Follow @ahmad_tokyo"></img></a>
 
+<a href="https://react-native-flex-grid.netlify.app">
+<img src="https://i.imgur.com/FNq8kr2.png"></img>
+</a>
+
 Check the [DEMO](https://react-native-flex-grid.netlify.app), built with [Storybook](https://storybook.js.org) and [react-native-web](https://necolas.github.io/react-native-web).
 
 # Getting Started
