--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -173,6 +173,24 @@ setConfig({
 - getConfig: returns config object
 - setConfig: modifies config object
 
+### Development
+- To run Storybook locally on [localhost:6006](localhost:6006)
+  - ```
+    yarn storybook
+    ```
+- To run expo locally
+  - ```
+    yarn start
+    ```
+- To run ios locally
+  - ```
+    yarn ios
+    ```
+- To run android locally
+  - ```
+    yarn android
+    ```
+
 ### Helpful resources
 - [Bootstrap layout documentation](https://getbootstrap.com/docs/5.0/layout)
 - [Reactstrap layout documentation](https://reactstrap.github.io/?path=/docs/components-layout--layout)
