--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -1,3 +1,5 @@
+<Meta title="README" />
+
 # react-native-flex-grid
 A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s web grid.
 
@@ -170,7 +172,6 @@ setConfig({
 #### API
 - getConfig: returns config object
 - setConfig: modifies config object
-
 
 ### Development
 - To run Storybook locally on [localhost:6006](localhost:6006)
