--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -102,76 +102,7 @@ export default MyComponent;
 ```
 
 ### Modifying Grid Configuration
-The grid is 100% modifiable, all values can be found in the config object in `src/utils/grid`;
-
-```js
-/** Grid configuration */
-let GRID_CONFIG: GRID_CONFIG_TYPE = {
-  /** Grid Breakpoints */
-  breakpoints: {
-    xs: 0,
-    sm: 375,
-    md: 768,
-    lg: 1024,
-    xl: 1200,
-  },
-  /** Grid column count */
-  colCount: 12,
-  /** Common gutters used */
-  gutters: {
-    0: 0,
-    1: SPACER * 0.25,
-    2: SPACER * 0.5,
-    3: SPACER,
-    4: SPACER * 1.5,
-    5: SPACER * 3,
-  },
-  /** Container max widths */
-  containerMaxWidths: {
-    xs: '100%',
-    sm: '100%',
-    md: '100%',
-    lg: '100%',
-    xl: 1140,
-  },
-  /** Container paddings horizontal */
-  containerPaddingsHorizontal: {
-    xs: 18,
-    sm: 20,
-    md: 40,
-    lg: 48,
-    xl: 48,
-  },
-};
-```
-
-To modify grid configuration, add these lines somewhere in your app before rendering the grid, eg: in App.js or in wrapper components:
-```js
-import { setConfig } from 'react-native-flex-grid';
-
-setConfig({
-  breakpoints: {
-    xs: 0,
-    sm: 390,
-    md: 768,
-    lg: 1024,
-    xl: 1024,
-  },
-  colCount: 4,
-  gutters: {
-    0: 0,
-    1: 4,
-    2: 8,
-    3: 12,
-    4: 16,
-    5: 20,
-  },
-});
-```
-
-#### API
-- getConfig: returns config object
-- setConfig: modifies config object
+The grid is 100% modifiable, checkout the [detailed docs](https://react-native-flex-grid.netlify.app)
 
 ### Development
 - To run Storybook locally on [localhost:6006](localhost:6006)
