--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -102,7 +102,7 @@ export default MyComponent;
 ```
 
 ### Modifying Grid Configuration
-The grid is 100% modifiable, checkout the [detailed docs](https://react-native-flex-grid.netlify.app)
+The grid is 100% modifiable, checkout the [detailed docs](/story/utils-grid--page)
 
 ### Development
 - To run Storybook locally on [localhost:6006](localhost:6006)
