--- a/src/utils/grid.stories.mdx
+++ b/src/utils/grid.stories.mdx
@@ -1,7 +1,7 @@
 <Meta title="utils/grid" />
 
 ### Modifying Grid Configuration
-The grid is 100% modifiable, all values can be found in the config object in `src/utils/grid`;
+The grid is 100% modifiable, all values can be found in the config object in `src/utils/grid`.  [Bootstrap Docs](https://getbootstrap.com/docs/5.0/layout/grid)
 
 ```js
 /** Grid configuration */
