--- a/src/utils/responsive.stories.mdx
+++ b/src/utils/responsive.stories.mdx
@@ -2,7 +2,7 @@
 
 ### Useful responsive utils
 
-A set of useful utilities for responsive design.
+A set of useful utilities for responsive design. [Bootstrap Docs](https://getbootstrap.com/docs/5.0/layout/breakpoints)
 
 #### mediaQuery
 Media Query to check for the grid breakpoint matching current screen size.
