--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -19,10 +19,11 @@ Check the [DEMO](https://react-native-flex-grid.netlify.app), built with [Storyb
 
 ## Installation
 
+NPM:
 ```bash
 npm install --save react-native-flex-grid
 ```
-OR
+YARN:
 ```bash
 yarn add react-native-flex-grid
 ```
@@ -104,23 +105,11 @@ export default MyComponent;
 ### Modifying Grid Configuration
 The grid is 100% modifiable, checkout the [detailed docs](/story/utils-grid--page)
 
+### Responsive utils
+Checkout the [detailed docs](/story/utils-responsive--page) for a set of useful responsive utilities like css/scss like media queries.
+
 ### Development
-- To run Storybook locally on [localhost:6006](localhost:6006)
-  - ```
-    yarn storybook
-    ```
-- To run expo locally
-  - ```
-    yarn start
-    ```
-- To run ios locally
-  - ```
-    yarn ios
-    ```
-- To run android locally
-  - ```
-    yarn android
-    ```
+Checkout the [detailed docs](/story/development--page) to understand how to run the repo locally and how to develop with it.
 
 ### Helpful resources
 - [Bootstrap layout documentation](https://getbootstrap.com/docs/5.0/layout)
