auto gen readme story

--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -1,5 +1,7 @@
 <Meta title="README" />
 
+//This file is auto generated from README.md -- any manual changes will be discarded
+
 # react-native-flex-grid
 A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s web grid.
 
@@ -103,13 +105,13 @@ export default MyComponent;
 ```
 
 ### Modifying Grid Configuration
-The grid is 100% modifiable, checkout the [detailed docs](/story/utils-grid--page)
+The grid is 100% modifiable, checkout the [detailed docs](/?path=/story/utils-grid--page)
 
 ### Responsive utils
-Checkout the [detailed docs](/story/utils-responsive--page) for a set of useful responsive utilities like css/scss like media queries.
+Checkout the [detailed docs](/?path=/story/utils-responsive--page) for a set of useful responsive utilities like css/scss like media queries.
 
 ### Development
-Checkout the [detailed docs](/story/development--page) to understand how to run the repo locally and how to develop with it.
+Checkout the [detailed docs](/?path=/story/development--page) to understand how to run the repo locally and how to develop with it.
 
 ### Helpful resources
 - [Bootstrap layout documentation](https://getbootstrap.com/docs/5.0/layout)
