--- a/src/README.stories.mdx
+++ b/src/README.stories.mdx
@@ -3,16 +3,22 @@
 //This file is auto generated from README.md -- any manual changes will be discarded
 
 # react-native-flex-grid
+
 A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s web grid.
 
 <a href="https://npmjs.com/package/react-native-flex-grid">
   <img src="https://img.shields.io/npm/v/react-native-flex-grid.svg"></img>
   <img src="https://img.shields.io/npm/dt/react-native-flex-grid.svg"></img>
 </a>
-<a href="https://twitter.com/intent/follow?screen_name=ahmad_tokyo"><img src="https://img.shields.io/twitter/follow/ahmad_tokyo.svg?label=Follow%20@ahmad_tokyo" alt="Follow @ahmad_tokyo"></img></a>
+<a href="https://twitter.com/intent/follow?screen_name=ahmad_tokyo">
+  <img
+    src="https://img.shields.io/twitter/follow/ahmad_tokyo.svg?label=Follow%20@ahmad_tokyo"
+    alt="Follow @ahmad_tokyo"
+  ></img>
+</a>
 
 <a href="/">
-<img src="https://i.imgur.com/FNq8kr2.png"></img>
+  <img src="https://i.imgur.com/FNq8kr2.png"></img>
 </a>
 
 Check the [DEMO](/), built with [Storybook](https://storybook.js.org) and [react-native-web](https://necolas.github.io/react-native-web).
@@ -22,34 +28,46 @@ Check the [DEMO](/), built with [Storybook](https://storybook.js.org) and [react
 ## Installation
 
 NPM:
+
 ```bash
 npm install --save react-native-flex-grid
 ```
+
 YARN:
+
 ```bash
 yarn add react-native-flex-grid
 ```
 
 ## Usage
+
 ```jsx
 import { Container, Row, Col } from 'react-native-flex-grid';
 
 const MyComponent = (
   <Container fluid>
     <Row>
-      <Col><Text>.col</Text></Col>
+      <Col>
+        <Text>.col</Text>
+      </Col>
     </Row>
     <Row>
-      <Col><Text>.col</Text></Col>
-      <Col><Text>.col</Text></Col>
-      <Col><Text>.col</Text></Col>
-      <Col><Text>.col</Text></Col>
+      <Col>
+        <Text>.col</Text>
+      </Col>
+      <Col>
+        <Text>.col</Text>
+      </Col>
+      <Col>
+        <Text>.col</Text>
+      </Col>
+      <Col>
+        <Text>.col</Text>
+      </Col>
     </Row>
     <Row>
       <Col xs="3">
-        <Text>
-          .col-3
-        </Text>
+        <Text>.col-3</Text>
       </Col>
       <Col xs="auto">
         <Text>.col-auto - variable width content</Text>
@@ -105,17 +123,22 @@ export default MyComponent;
 ```
 
 ### Modifying Grid Configuration
+
 The grid is 100% modifiable, checkout the [detailed docs](/?path=/story/utils-grid--page)
 
 ### Responsive utils
+
 Checkout the [detailed docs](/?path=/story/utils-responsive--page) for a set of useful responsive utilities like css/scss like media queries.
 
 ### Development
+
 Checkout the [detailed docs](/?path=/story/development--page) to understand how to run the repo locally and how to develop with it.
 
 ### Helpful resources
+
 - [Bootstrap layout documentation](https://getbootstrap.com/docs/5.0/layout)
 - [Reactstrap layout documentation](https://reactstrap.github.io/?path=/docs/components-layout--layout)
 
 ### Contributing
+
 Pull requests are highly appreciated! For major changes, please open an issue first to discuss what you would like to change.
