:zap: enhance style getters

--- a/src/README.generated.stories.mdx
+++ b/src/README.generated.stories.mdx
@@ -1,7 +1,5 @@
 <Meta title="README" />
 
-//This file is auto generated from README.md -- any manual changes will be discarded
-
 # react-native-flex-grid
 
 A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s web grid.
@@ -136,6 +134,7 @@ Checkout the [detailed docs](/?path=/story/development--page) to understand how 
 
 ### Helpful resources
 
+- [Blogpost](https://www.notion.so/ahmedtokyo/React-Native-Flex-Grid-6932aa014d274ae7940595664873b7dd)
 - [Bootstrap layout documentation](https://getbootstrap.com/docs/5.0/layout)
 - [Reactstrap layout documentation](https://reactstrap.github.io/?path=/docs/components-layout--layout)
 
