--- a/src/README.generated.stories.mdx
+++ b/src/README.generated.stories.mdx
@@ -16,7 +16,7 @@ A react-native flexbox grid similar to [bootstap](https://getbootstrap.com)'s we
 </a>
 
 <a href="/">
-  <img src="https://i.imgur.com/FNq8kr2.png"></img>
+  <img src="https://i.imgur.com/VWFX2r6.png"></img>
 </a>
 
 Check the [DEMO](/), built with [Storybook](https://storybook.js.org) and [react-native-web](https://necolas.github.io/react-native-web).
