:sparkles: enhance demo

--- a/src/README.generated.stories.mdx
+++ b/src/README.generated.stories.mdx
@@ -125,7 +125,8 @@ export default MyComponent;
 Container
 
 ```tsx
-export declare interface ContainerProps extends ViewProps {
+export declare interface ContainerProps
+  extends React.ComponentProps<typeof View> {
   /** Fluid Container */
   fluid?: boolean;
   /** No Padding */
@@ -138,7 +139,7 @@ export declare interface ContainerProps extends ViewProps {
 Row
 
 ```tsx
-export declare interface RowProps extends ViewProps {
+export declare interface RowProps extends React.ComponentProps<typeof View> {
   /** Gutter size -- [Bootstrap Gutters](https://getbootstrap.com/docs/5.0/layout/gutters/) */
   gx?: 0 | 1 | 2 | 3 | 4 | 5;
   /** Direction */
@@ -151,7 +152,7 @@ export declare interface RowProps extends ViewProps {
 Col
 
 ```tsx
-export declare interface ColProps extends ViewProps {
+export declare interface ColProps extends React.ComponentProps<typeof View> {
   /** xs size */
   xs?: number | string;
   /** sm size */
